# Wanderer

./: README.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: .env.example  2  Cargo.toml  build_log.txt  output.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cache.rs  clip.rs  database.rs  errors.rs  lib.rs  main.rs  media_utils.rs  metadata.rs  progress_stream.rs  raw_support.rs  sync_manifest.rs  sync_worker.rs  telegram.rs  upload_worker.rs  view_cache.rs  watcher.rs
src-tauri/src/ai/: arcface.rs  mod.rs  object_detection.rs  worker.rs
src-tauri/src/security/: mod.rs
src/components/: AlbumDetail.tsx  Albums.tsx  AppSidebar.tsx  Archive.tsx  BulkActionBar.tsx  DuplicateReview.tsx  ErrorBoundary.tsx  Favorites.tsx  Gallery.tsx  Layout.tsx  LoginView.tsx  MapView.tsx  MediaGrid.tsx  MediaViewer.tsx  Onboarding.tsx  People.tsx  PersonDetail.tsx  Search.tsx  Settings.tsx  Sidebar.tsx  SmartAlbums.tsx  Tags.tsx  ThemeSwitcher.tsx  Trash.tsx  UploadQueue.tsx  WindowControls.tsx
src/components/ui/: sidebar.tsx
src/contexts/: ThemeContext.tsx
src/lib/: api.ts
